@@ -1,3 +1,9 @@
+2007-03-19  Eitan Isaacson  <eitan@ascender.com>
+
+	* src/accerciser.glade: Removed old help dialog.
+	* src/lib/accerciser/accerciser.py: Added epydoc
+	docstrings. Removed obsolete methods.
+
 2007-03-18  Eitan Isaacson  <eitan@ascender.com>
 
 	* src/lib/accerciser/accerciser.py: Show dialog and quit when
